@@ -27,6 +27,10 @@ Backwards Incompatibilities
 Bug Handling
 ------------
 
+* CarbonOutput using UDP transport now uses multiple packets to send stats
+  data to Carbon server when output would be longer than the 64KiB max size
+  for UDP packets (issue #1035).
+
 * Fixed the MySQL slow query grammar to handle logs with no newline.
 
 * Fixed packet tracking idle packs error output formatting.
